// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminSettings Nextcloud OAuth values form edit mode should show the form and hide the field values 1`] = `
<div class="nextcloud-oauth-values">
  <formheading-stub index="3" title="Nextcloud OAuth client" iscomplete="true"></formheading-stub>
  <div>
    <textinput-stub value="nc-client-id" id="nextcloud-oauth-client-id" type="text" placeholder="" label="Nextcloud OAuth client ID" hinttext="Copy the following values back into the OpenProject {htmlLink} as an Administrator." isrequired="true" withcopybtn="true" readonly="true" class="pb-2"></textinput-stub>
    <textinput-stub value="nc-client-secret" id="nextcloud-oauth-client-secret" type="text" placeholder="" label="Nextcloud OAuth client secret" hinttext="Copy the following values back into the OpenProject {htmlLink} as an Administrator." isrequired="true" withcopybtn="true" readonly="true" class="pb-2"></textinput-stub>
    <button-stub type="primary" nativetype="button" data-test-id="submit-nc-oauth-values-form-btn">
      Yes, I have copied these values
    </button-stub>
  </div>
</div>
`;

exports[`AdminSettings Nextcloud OAuth values form view mode with complete values should show the field values and hide the form 1`] = `
<div class="nextcloud-oauth-values">
  <formheading-stub index="3" title="Nextcloud OAuth client" iscomplete="true"></formheading-stub>
  <div>
    <fieldvalue-stub title="Nextcloud OAuth client ID" value="some-nc-client-id-here" isrequired="true"></fieldvalue-stub>
    <fieldvalue-stub title="Nextcloud OAuth client secret" value="some-nc-client-secret-here" isrequired="true" encryptvalue="true" withinspection="true"></fieldvalue-stub>
    <button-stub type="secondary" nativetype="button" data-test-id="reset-nc-oauth-btn">
      Reset Nextcloud OAuth values
    </button-stub>
  </div>
</div>
`;

exports[`AdminSettings OpenProject OAuth values form edit mode should show the form and hide the field values 1`] = `
<div class="openproject-oauth-values">
  <div class="form-heading">
    <div class="index">
      2
    </div>
    <div class="title">
      OpenProject OAuth settings
    </div>
  </div>
  <div>
    <div class="text-input-wrapper pb-2">
      <div class="text-input">
        <div class="text-input-label">
          OpenProject OAuth client ID *
        </div> <input id="openproject-oauth-client-id" type="text" placeholder="" class="">
        <div>
          <div class="text-input-hint">Go to your OpenProject {htmlLink} as an Administrator and start the setup and copy the values here.</div>
        </div>
      </div>
      <!---->
    </div>
    <div class="text-input-wrapper pb-2">
      <div class="text-input">
        <div class="text-input-label">
          OpenProject OAuth client secret *
        </div> <input id="openproject-oauth-client-secret" type="text" placeholder="" class="">
        <div>
          <div class="text-input-hint">Go to your OpenProject {htmlLink} as an Administrator and start the setup and copy the values here.</div>
        </div>
      </div>
      <!---->
    </div> <button data-v-27e36536="" type="button" disabled="disabled" data-test-id="submit-op-oauth-btn" class="button-vue button-vue--icon-and-text button-vue--vue-primary"><span data-v-27e36536="" class="button-vue__wrapper"><span data-v-27e36536="" class="button-vue__icon"><div data-v-27e36536="" class="check-icon"></div></span> <span data-v-27e36536="" class="button-vue__text">
				Save
			</span></span></button>
  </div>
</div>
`;

exports[`AdminSettings OpenProject OAuth values form view mode and completed state should show field values and hide the form if server host form is complete 1`] = `
<div class="openproject-oauth-values">
  <div class="form-heading">
    <div class="complete">
      <div class="icon icon-checkmark"></div>
    </div>
    <div class="title green-text">
      OpenProject OAuth settings
    </div>
  </div>
  <div>
    <div class="field-item"><b class="field-item-title">
        OpenProject OAuth client ID*:
      </b>
      <div class="field-item-value">
        openproject-client-id
      </div>
      <!---->
    </div>
    <div class="field-item pb-1"><b class="field-item-title">
        OpenProject OAuth client secret*:
      </b>
      <div class="field-item-value">
        openproj***************
      </div>
      <!---->
    </div> <button data-v-27e36536="" type="button" data-test-id="reset-op-oauth-btn" class="button-vue button-vue--icon-and-text button-vue--vue-secondary"><span data-v-27e36536="" class="button-vue__wrapper"><span data-v-27e36536="" class="button-vue__icon"><div data-v-27e36536="" class="reset-icon"></div></span> <span data-v-27e36536="" class="button-vue__text">
				Reset OpenProject OAuth values
			</span></span></button>
  </div>
</div>
`;

exports[`AdminSettings server host url form edit mode cancel button should be visible when the form is in completed state with edit mode 1`] = `
<button data-v-27e36536="" type="button" data-test-id="cancel-edit-server-host-btn" class="button-vue mr-2 button-vue--text-only button-vue--vue-secondary"><span data-v-27e36536="" class="button-vue__wrapper"><!----> <span data-v-27e36536="" class="button-vue__text">
				Cancel
			</span></span></button>
`;

exports[`AdminSettings server host url form edit mode readonly state should clear the readonly state when clicked on the input 1`] = `<input id="openproject-oauth-instance" type="text" placeholder="https://www.my-openproject.com" class="">`;

exports[`AdminSettings server host url form edit mode readonly state should set the input field to readonly at first 1`] = `<input id="openproject-oauth-instance" type="text" readonly="readonly" placeholder="https://www.my-openproject.com" class="text-input-readonly">`;

exports[`AdminSettings server host url form edit mode submit button should set the input to error state when the url is invalid when clicked 1`] = `
<div class="text-input-wrapper pb-2">
  <div class="text-input">
    <div class="text-input-label">
      OpenProject host *
    </div> <input id="openproject-oauth-instance" type="text" readonly="readonly" placeholder="https://www.my-openproject.com" class="text-input-error text-input-readonly">
    <div>
      <div class="text-input-error-message">
        Please introduce a valid OpenProject host name
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`AdminSettings server host url form view mode and completed state reset button should be visible when the form is in completed state 1`] = `
<button data-v-27e36536="" type="button" data-test-id="reset-server-host-btn" class="button-vue button-vue--icon-and-text button-vue--vue-secondary"><span data-v-27e36536="" class="button-vue__wrapper"><span data-v-27e36536="" class="button-vue__icon"><div data-v-27e36536="" class="pencil-icon"></div></span> <span data-v-27e36536="" class="button-vue__text">
				Edit server information
			</span></span></button>
`;

exports[`AdminSettings server host url form view mode and completed state should show field value and hide the input field 1`] = `
<div class="openproject-server-host">
  <div class="form-heading">
    <div class="complete">
      <div class="icon icon-checkmark"></div>
    </div>
    <div class="title green-text">
      OpenProject server
    </div>
  </div>
  <div class="field-item pb-1"><b class="field-item-title">
      OpenProject host*:
    </b>
    <div class="field-item-value">
      http://openproject.com
    </div>
    <!---->
  </div>
  <div class="d-flex"><button data-v-27e36536="" type="button" data-test-id="reset-server-host-btn" class="button-vue button-vue--icon-and-text button-vue--vue-secondary"><span data-v-27e36536="" class="button-vue__wrapper"><span data-v-27e36536="" class="button-vue__icon"><div data-v-27e36536="" class="pencil-icon"></div></span> <span data-v-27e36536="" class="button-vue__text">
				Edit server information
			</span></span></button>
    <!---->
    <!---->
  </div>
</div>
`;
